clarrify the purpose of the directory

--- a/Assignments/README
+++ b/Assignments/README
@@ -1,3 +1,1 @@
-This directory is intended to host class exercises.
-
-Please create a folder with your name and add your assignments to this folder.
+This is Sarun's directory for assignments
