--- a/Teams/Eclectic-A-Team/Portfolios/README
+++ b/Teams/Eclectic-A-Team/Portfolios/README
@@ -1,1 +1,1 @@
-This directory contains the project folders for out individual portfolio websites.
+This directory contains the project folders for our individual portfolio websites.
